--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="MEAN BLOCK">
     <title>Public Home Page</title>
   </head>
-  <body ng-app="ClientWebApp" ng-controller="StoreFrontController">
+  <body ng-app="ClientWebApp">
     MEAN BLOCK Public Home Page
     <div class="mainViewWindow">
       <ng-view></ng-view>
@@ -16,6 +16,7 @@
       <script type="text/javascript" src="js/ClientWebApp.js"></script>
       <script type="text/javascript" src="js/Controllers/StoreFrontController.js"></script>
       <script type="text/javascript" src="js/Controllers/BehindTheCounterController.js"></script>
+      <script type="text/javascript" src="js/Controllers/SmartHomeController.js"></script>
 
   </body>
 </html>
