--- a/public/StoreFront/PromoCodeForm.html
+++ b/public/StoreFront/PromoCodeForm.html
@@ -4,5 +4,7 @@
     Promocode:</label>
     <div><input class="form_input" id="promocode" placeholder="#PROMOCODE" ng-model="promo_code"></input></div>
     <input class="btn btn-default pc_btn" type="submit" value="Go" ng-disabled="!promo_code" />
+    <a href="#!/CancelCheckout"><button name="cancel" class="btn btn-default" type="cancel">Cancel</button></a>
+
   </form>
 </div>
