--- a/public/BehindTheCounter/behind_the_counter.html
+++ b/public/BehindTheCounter/behind_the_counter.html
@@ -5,6 +5,7 @@
     <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "category in backend_category" href="#!/BehindTheCounter/{{category.name}}"><strong>{{category.name}}</strong></a></h1></div>
     <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "link in useful_links" href="{{link.url}}" target="_blank"><strong>{{link.name}}</strong></a></h1></div>
     <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "link in dev_links" href="{{link.url}}" ><strong>{{link.name}}</strong></a></h1></div>
+    <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "link in ethereum_links" href="{{link.url}}" ><strong>{{link.name}}</strong></a></h1></div>
     <div><h1><a class="backend_category_buttons btn btn-default" href='#!/Logout'>Logout</a></h1></div>
   </div>
 </div>
