--- a/public/StoreFront/Checkout.html
+++ b/public/StoreFront/Checkout.html
@@ -1,5 +1,5 @@
 <div class="view2 checkout_form">
-  <form ng-submit="checkout();" id="hosted-fields-form" method="post">
+  <form name="checkoutForm" ng-submit="checkout();" id="hosted-fields-form" method="post">
     <label for="card-number">
       <span class="icon">
        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
@@ -8,25 +8,34 @@
        </svg>
      </span>
     Card Number:</label>
-    <div><input class="form_input" id="card-number"></input></div>
+    <div class="form_input" id="card-number" ng-model="payform.cardnumber" required></div>
 
     <label for="cvv">
       <span class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/></svg>
       </span>
       CVV:</label>
-      <div><input class="form_input" id="cvv"></input></div>
+      <div class="form_input" id="cvv" ng-model="payform.cvv" required></div>
 
     <label for="expiration-date">
       <span class="icon">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/></svg>
       </span>
       Expiration Date:</label>
-      <div><input class="form_input" id="expiration-date"></input></div>
+      <div class="form_input" id="expiration-date" ng-model="payform.expdate" required></div>
+
+    <label for="postal-code">
+      <span class="icon">
+        <img width="20" height="20" src="../public/img/storefront/location-glyph-black.png" />
+      </span>
+      Zipcode:</label>
+      <div class="form_input" id="postal-code" ng-model="payform.zipcode" required></div>
 
     <div id="checkout-message"></div>
 
-    <button class="btn btn-default pay_btn" type="submit" value="Pay" disabled >Pay</button>
+    <button name="submit" id="pay_btn" class="btn btn-default pay_btn" type="submit" value="Pay" >Pay</button>
+    <!-- ng-disabled="!cardnumber || !cvv || !expdate || !zipcode" -->
+    <a href="#!/CancelCheckout"><button name="cancel" class="btn btn-default" type="cancel">Cancel</button></a>
 
     <div class="card_icons">
       <img src="./img/storefront/visa-logo.svg" alt="visa">
