--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/smarthome/main.css" />
     <link rel="stylesheet" href="css/smarthome/chart_style.css" />
     <link rel="stylesheet" href="css/smarthome/circle-nav.css" />
-    <link rel="stylesheet" href="css/smarthome/therm.css" />
     <link rel="stylesheet" href="css/smarthome/animate.css" />
     <link rel="stylesheet" href="css/angelsroom/angels.css" />
     <link rel="stylesheet" href="css/angelsroom/animate.css" />
@@ -24,12 +23,13 @@
     <div class="mainViewWindow">
       <ng-view></ng-view>
     </div>
-      <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.js"></script>
+      <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+      <script src="/node_modules/angular/angular.js"></script>
+      <script src="/node_modules/angular-route/angular-route.js"></script>
+      <script src="/node_modules/angular-animate/angular-animate.js"></script>
       <script src="https://js.braintreegateway.com/web/3.82.0/js/client.min.js"></script>
       <script src="https://js.braintreegateway.com/web/3.82.0/js/hosted-fields.min.js"></script>
+      <script src="https://js.braintreegateway.com/web/3.82.0/js/data-collector.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-charts/0.2.7/angular-charts.js"></script>
