--- a/public/StoreFront/about_store_front.html
+++ b/public/StoreFront/about_store_front.html
@@ -4,7 +4,7 @@
     <p>In case the name didn't give it away ...<h1>We Roast Coffee!</h1></p>
     <p>Welcome to our storefront.  Here's how it works:</p>
     <p>Right now, I roast a few days per week. Everyone loves a fresh roast, so product moves fast.</p>
-    <p>All sales are<h2><img height="35px" class="img_spacer" src="./img/angels/WholeBeans.png">WHOLE BEAN!<img height="35px" class="img_spacer" src="./img/angels/WholeBeans.png"></h2>to keep your brew fresh. Nature makes the best packaging!</p>
+    <p>All sales are<h2><img height="35px" class="img_spacer" src="./img/storefront/bean_bar.png">WHOLE BEAN!<img height="35px" class="img_spacer" src="./img/storefront/bean_bar.png"></h2>to keep your brew fresh. Nature makes the best packaging!</p>
     <p>If you have a promo code, you can enter it at checkout for a discount.<p>
 
     <p>You can ...</p>
