--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/angelsroom/coin_animation.css" />
     <link rel="stylesheet" href="css/angelsroom/main.css" />
     <link rel="stylesheet" href="css/style.css" />
-
+    <!-- In today's world, it's not about how big your muscles are but rather how smart your robot is ~~ Jolly -->
     <title>MEAN Block HomePage</title>
   </head>
   <body ng-app="ClientWebApp">
