--- a/public/BehindTheCounter/RoastList.html
+++ b/public/BehindTheCounter/RoastList.html
@@ -46,7 +46,7 @@
     <table ng-show="order_view_state === 'byOrder'">
       <thead><tr><th>By Order</th><th>Buyer</th><th>Total</th></tr></thead>
       <tbody>
-        <tr ng-repeat="order in purchase_orders | orderBy: '-timestamp'">
+        <tr ng-show="order.status === 'received'" ng-repeat="order in purchase_orders | orderBy: '-timestamp'">
           <td>Promocode: {{order.promo_code}}<br>
               <table>
               <thead><tr><th>Sku</th><th>Origin</th><th>Roast Type</th><th>Quantity</th></tr></thead>
@@ -62,6 +62,8 @@
           </td>
           <td>{{order.buyer}}</td>
           <td>{{order.total}}</td>
+          <td>{{order.status}}</td>
+
         </tr>
       </tbody>
       <tfoot></tfoot>
@@ -69,7 +71,7 @@
     <table ng-show="order_view_state === 'byBean'">
       <thead><tr><th>By Bean</th></tr></thead>
       <tbody>
-        <tr ng-repeat="order in purchase_orders | orderBy: '-timestamp'">
+        <tr ng-show="order.status === 'received'" ng-repeat="order in purchase_orders | orderBy: '-timestamp'">
           <td>Timestamp: {{order.timestamp}}<br/><br/>
               <table>
               <thead><tr><th>Bean</th><th>Roast Type</th><th>Weight</th></tr></thead>
