--- a/public/BehindTheCounter/behind_the_counter.html
+++ b/public/BehindTheCounter/behind_the_counter.html
@@ -3,11 +3,18 @@
     color: #00B7FF;
     text-align: center;
   }
+  .db_button {
+    float: left;
+  }
+  .roast_list_button {
+    float: right;
+  }
 </style>
 <div ng-controller="BehindTheCounterController" ng-init="fetchusername();">
   <atnavbarbehindthecounter></atnavbarbehindthecounter>
   <div class="v view2">
-    <div><p>Hi <strong>{{username}}</strong>! You are <strong>{{title}}</strong>! <a href="#!/BehindTheCounter/RoastList" class="backend_category_buttons btn btn-default"><strong>Lets Get Roast'n!</strong></a></p></div>
+    <a href="http://localhost/~J/phpmyadmin" class="backend_category_buttons btn btn-default db_button" target="_blank">Database</a>
+    <div><p>Hi <strong>{{username}}</strong>! You are <strong>{{title}}</strong>! <a href="#!/BehindTheCounter/RoastList" class="backend_category_buttons btn btn-default roast_list_button"><strong>Lets Get Roast'n!</strong></a></p></div>
     <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "category in backend_category" href="#!/BehindTheCounter/{{category.name}}"><strong>{{category.name}}</strong></a></h1></div>
     <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "link in useful_links" href="{{link.url}}" target="_blank"><strong>{{link.name}}</strong></a></h1></div>
     <div class="scroller"><h1><a class="backend_category_buttons btn btn-default" ng-repeat = "link in dev_links" href="{{link.url}}" ><strong>{{link.name}}</strong></a></h1></div>
