--- a/public/StoreFront/store_front.html
+++ b/public/StoreFront/store_front.html
@@ -1,4 +1,5 @@
 <div ng-controller="StoreFrontController">
+  {{printitout}}
   <div class="angelsroom">
       <atnavbarstorefront></atnavbarstorefront>
       <h1>{{title}}</h1>
