--- a/public/BehindTheCounter/Merchandise.html
+++ b/public/BehindTheCounter/Merchandise.html
@@ -35,9 +35,9 @@
       <div class="back_button btn btn-default">Back to Dashboard</div>
     </a>
   </div>
-  <div class='row-sm view2 v'>
+  <div class='row-sm view'>
     <h1>Enter Merchandise into Inventory!</h1>
-    <div class="col-md-4 col-md-offset-4">
+    <div class="row-sm">
         <form name="newMerchandiseForm" ng-submit="addMerchandiseInventory()" data-ng-model="newMerchandiseForm" class="form-inline">
             <div class="form-group">
                 <label for="sku">Product sku: </label>
@@ -104,8 +104,8 @@
             <td>Total</td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
+            <td>{{ merchandiseInventoryTotalRetailValue }}</td>
+            <td>{{ merchandiseInventoryTotalItems }}</td>
             <td></td>
             <td>{{ merchandiseInventoryTotalCost | currency }}</td>
           </tr>
