--- a/public/StoreFront/about_store_front.html
+++ b/public/StoreFront/about_store_front.html
@@ -15,7 +15,19 @@
 
     <p>Also,</p>
     <p>I've been brewing up something special for the next few cups!</p>
-    <p>Through use of the <img height="35px" class="img_spacer" src="./img/angels/ethereum.jpg">Ethereum<img height="35px" class="img_spacer" src="./img/angels/ethereum.jpg"> Blockchain network, we can now offer our own <img height="75px" class="img_spacer" src="./img/angels/AT_ETH_ENS_Logo.gif"> to crowdfund our startup costs.</p>
+    <p>Through use of the
+      <a href="https://ethereum.org" style="text-decoration:none;" target="_blank">
+        <img height="35px" class="img_spacer" src="./img/angels/ethereum.jpg">
+      </a>
+      Ethereum
+      <a href="https://ethereum.org" style="text-decoration:none;" target="_blank">
+        <img height="35px" class="img_spacer" src="./img/angels/ethereum.jpg">
+      </a>
+       Blockchain network, we can now offer our own
+       <a href="https://rarible.com/token/0xd07dc4262bcdbf85190c01c996b4c06a461d2430:225304?tab=owners" style="text-decoration:none;" target="_blank">
+         <img height="75px" class="img_spacer" src="./img/angels/AT_ETH_ENS_Logo.gif">
+       </a> to crowdfund our startup costs.
+    </p>
     <p>Purchase our Angel Tokens to help us run hot for a few weeks and free up capital.  Basically, just like a crowdfund, by schedulling a full week or two of roasting all at once, we can more use capital more efficiently and return some back to you, our most beloved coffee drinker.</p>
     <p>All the code is opensourced and decentralized so you're free to poke around and see exactly how things work.</p>
     <p>Further, if you think the Angel Token could be helpful to you in some way, and your coffee has you looking for something good to do, you could also manifest Angel Tokens and fund your own endeavors!</p>
