--- a/public/StoreFront/ATNavbarStoreFront.html
+++ b/public/StoreFront/ATNavbarStoreFront.html
@@ -1,4 +1,8 @@
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+  <a href="https://rarible.com/token/0xd07dc4262bcdbf85190c01c996b4c06a461d2430:225304?tab=owners" style="text-decoration:none;" target="blank">
+    <img height="50px" class="img_spacer" src="./img/angels/Rarible_Logo.png" alt="Rarible">
+    <img height="50px" class="img_spacer" src="./img/angels/AT_ETH_Logo.gif" alt="Angel Token">
+  </a>
   <a class="whats_it navbar-brand px-3" align="center" href="/public/#!/StoreFront/about_store_front" style="text-decoration:none;">Caffeine LaManna</a>
   <ul class="navbar-nav px-3">
      <li class="nav-item text-nowrap d-none d-sm-none d-sm-block">
