--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="MEAN BLOCK">
     <meta name="description" content="CafLaM_MEAN_Stack">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link rel="stylesheet" href="css/smarthome/main.css" />
     <link rel="stylesheet" href="css/smarthome/chart_style.css" />
@@ -16,14 +17,32 @@
     <link rel="stylesheet" href="css/angelsroom/coin_animation.css" />
     <link rel="stylesheet" href="css/angelsroom/main.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- In today's world, it's not about how big your muscles are but rather how smart your robot is ~~ Jolly -->
-    <title>MEAN Block HomePage</title>
+
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/zksync-checkout@latest/dist/main.js"></script>
+    <script type="module" src="js/web3.min.js"></script>
+
+
+    <title>MEAN Block HomePage</title>    <!-- In today's world, it's not about how big your muscles are but rather how smart your robot is ~~ Jolly -->
+
+    <script type="text/javascript">
+        window.addEventListener('load', function () {
+                if (typeof web3 !== 'undefined') {
+                    console.log('Web3 Detected! Network Version ID: ' + web3.currentProvider.networkVersion)
+                    window.web3 = new Web3(web3.currentProvider);
+                } else {
+                    console.log('No Web3 Detected... using HTTP Provider')
+                    window.web3 = new Web3(new Web3.providers.HttpProvider("https:localhost:7545"));
+                    // window.web3 = new Web3(new Web3.providers.HttpProvider("https://mainnet.infura.io/<APIKEY>"));
+                }
+        })
+    </script>
   </head>
   <body ng-app="ClientWebApp">
     <div class="mainViewWindow">
       <ng-view></ng-view>
     </div>
-      <script src="/node_modules/jquery/dist/jquery.min.js"></script>
       <script src="/node_modules/angular/angular.js"></script>
       <script src="/node_modules/angular-route/angular-route.js"></script>
       <script src="/node_modules/angular-animate/angular-animate.js"></script>
